Fixed a styling issue on smaller screens

--- a/lungo/src/css/main.css
+++ b/lungo/src/css/main.css
@@ -9,7 +9,7 @@
 }
 
 .property-information {
-    width: 75%;
+    width: 65%;
     height: 60px;
 }
 
